# Resilient-Artificial-Neural-Networks

./: README.md  drop0.txt
Results/FashionMnist/: Dropout0.txt
Results/FashionMnist/StimulatedDropout/: 50.txt  StimDrop20.txt  StimDrop80.txt
Results/Mnist/Dropout/: 50.txt  Mnist_Dropout0.txt  Mnist_Dropout20.txt  Mnist_Dropout50.txt  Mnist_Dropout80.txt
code/: CMakeLists.txt  README.md  mnist.cpp  script.sh  script2.sh  testMnist.cpp  testMnistDropout.cpp  testMnistStimulatedDropout.cpp  trainMnist.cpp  trainMnistDropout.cpp  trainMnistStimulatedDropout.cpp
